--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,102 @@
-body{
-    /* margin: auto; */
+body {
+  margin: 20px;
 }
-.explore-img{
-    width: 100%;
-    /* height: 20px; */
+.banner {
+  width: 100%;
+  height: 630px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("group-13.png");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  background-repeat: no-repeat;
 }
+
+.header {
+  color: white;
+  position: absolute;
+  text-align: center;
+  top: 30%;
+  left: 20%;
+  font-family: "Mulish", sans-serif;
+}
+.banner-heading {
+  font-size: 50px;
+  font-weight: 900;
+}
+
+.input-field {
+  display: flex;
+  height: 30px;
+  padding-top: 15px;
+  background-color: #000;
+  color: #fff;
+  opacity: 0.5;
+}
+
+/* Tour section */
+
+.tours {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.tour-heading {
+  font-size: 20px;
+  font-weight: 400;
+  padding-right: 100px;
+}
+
+.tour-heading li,
+p {
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: rgb(105, 103, 103);
+}
+
+.tour-btn {
+  height: 40px;
+  background-color: orangered;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 15px;
+}
+
+/* Tour section done */
+
+.destination-details {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.div-1{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+}
+
+.div-2{
+  display: grid;
+  /* flex: 1; */
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  margin-top: 20px;
+}
+
+.div--3{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  margin-top: 20px;
+}
+
+/* responsive for mobile device */
+
+/* @media screen and (max-width:600px) {
+  
+} */
